# ddrescue

./: Makefile  Makefile.android.arm32  Makefile.android.arm32abi28  Makefile.android.arm32pie  Makefile.android.arm64  Makefile.android.arm64abi28  README.dd_rescue  README.sparse  REL-ID  aes.c  aes_c.c  aes_ossl11.c  aesni.c  archdep.c  archdep.h  calchmac.py  checksum_file.c  configure.ac  dd_rescue.1  dd_rescue.c  dd_rescue2.c  dd_rescue2.h  ddr_crypt.1  ddr_lzma.1  ddr_lzo.1  ddr_plugin.h  fallocate64.h  ffs.h  ffs_sse42.c  fiemap.c  file_zblock.c  find_nonzero.c  find_nonzero.h  find_nonzero_arm.c  find_nonzero_arm64.c  find_nonzero_avx.c  find_nonzero_sse2.c  fmt_no.h  frandom.c  fstrim.c  (+21 more)
debian/: changelog  control  copyright  rules
